Fix scrollbars on all user infobox items in some browsers
In some browsers, `overflow: scroll;` puts scrollbars on _everything_, even when they wouldn't otherwise be required. `overflow: auto;` only uses them where they make sense.

--- a/public/less/_user.less
+++ b/public/less/_user.less
@@ -20,7 +20,7 @@
                         padding: 10px;
                         list-style: none;
 
-                        overflow: scroll; // prevent contents from spilling over
+                        overflow: auto; // prevent contents from spilling over
                         display: flex; // force horizontal layout
                         .user-orgs {
                             flex-grow: 1;
